# esp32_light

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  shtc3.cpp
